fix hover issue on mobile

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav a {
   font-size: 2em;
 }
 
-nav a:hover{
+nav a:hover {
   font-weight: bold;
 }
 
@@ -73,6 +73,10 @@ nav a:hover{
 
     nav a {
         font-size: 2em;
+    }
+
+    nav a:hover {
+        font-weight: normal;
     }
 
     ul li {
